# icicle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  program.md  pyproject.toml  pytest.ini
.github/workflows/: docs.yml
auxiliary/: a01_process_counts.py  a02_process_sizes.py  auxiliary.py  b01_pyspark.py  b02_octopus.py  b03_parquet.py  b04a_analysis.ipynb  b04b_analysis.ipynb  bmk-prepare.sh  bmk-run-256.sh  bmk-run.sh  bmk-update-json.sh  bmk-update-kda.sh  kda-config.sh
auxiliary/preprocess/: 00_collect_dbdb.sh  01_process_db.py  02_process_db_cont.py  03_preprocess_mmapplypolicy.py  mode_process.py
docs/: index.md
docs/icicle/: 00-overview.md  02-infrastructure.md  03-lustre-backend.md  04-gpfs-backend.md  06-workloads.md  07-benchmarking.md
docs/ingest/: 00-overview.md  01-preprocessing.md  02-infrastructure.md  03-flink-setup.md  04-flink-pipelines.md  05-analysis-scripts.md
docs/stylesheets/: extra.css
initial_ingest/: application_properties.json  calc.py  compile.sh  conf.py  helper_hpss.py  helper_itap.py  helper_nersc.py  main.py  pom.xml
initial_ingest/assembly/: assembly.xml
initial_ingest/utils/: kafkaconnector.py
monitor/: __init__.py  batch_processor.py  changelog_client.py  changelog_monitor.py  cli_helper.py  conf.py  data_types.py  main.py  mpsc_queue.py  output_handlers.py  state_manager.py
scripts/hooks/: rewrite_links.py
scripts/icicle-deploy/: cleanup.ipynb  deploy-config.yaml  deploy-gpfs.ipynb  deploy-lustre.ipynb  deploy_common.py  dev-machine.ipynb  gpfs-commands.md
scripts/icicle-workloads/: evaluate_output.sh  evaluate_performance.sh  filebench.f.template  fswatch-icicle.sh  gpfs-icicle.sh  lustre-icicle.sh  run-filebench.sh
scripts/ingest-analysis/: b01_pyspark.py  b02_octopus.py  b03_parquet.py  b04a_analysis.ipynb  b04b_analysis.ipynb  plots.ipynb
scripts/ingest-kda/: bmk-prepare.sh  bmk-run.sh  bmk-update-json.sh  kda-config.sh  kda-describe.sh  kda-start.sh  kda-update.sh  kda-url.sh
scripts/ingest-preprocessing/: 00_collect_dbdb.sh  01_process_db.py  02_preprocess_mmapplypolicy.py  03_process_db_cont.py  a01_process_counts.py  a02_process_sizes.py  auxiliary.py  mode_process.py
src/icicle/: README.md  __init__.py  __main__.py  batch.py  config.py  events.py  fswatch_events.py  fswatch_source.py  gpfs_events.py  gpfs_source.py  gpfs_state.py  lustre_events.py  lustre_source.py  monitor.py  mpsc_queue.py  output.py  queue.py  source.py  state.py
src/ingest/: Makefile  __init__.py  aggregation.py  application_properties.json  batch.py  calc.py  compile.sh  conf.py  constants.py  csv_schema.py  helpers.py  main.py  pipeline.py  pom.xml  prefix.py  sketches.py
src/ingest/utils/: __init__.py  kafkaconnector.py
tests/icicle/: backend_config.py  conftest.py  scenarios.py  workloads.py
tests/icicle/integration/: docker-compose.yaml  test_fswatch.py  test_gpfs.py  test_kafka.py  test_lustre.py
tests/icicle/unit/: test_batch.py  test_bench.py  test_event_source.py  test_events.py  test_gpfs_batch.py  test_gpfs_events.py  test_gpfs_scenarios.py  test_gpfs_source.py  test_gpfs_state.py  test_lustre_events.py  test_lustre_scenarios.py  test_lustre_source.py  test_monitor.py  test_mpsc_queue.py  test_output.py  test_scenarios.py  test_state.py  test_state_edge_cases.py  test_unified_scenarios.py
tests/ingest/: conftest.py  test_prefix.py  test_sketches.py  test_worker_id.py
workloads/: README.md  a01_clear.sh  a02_load.sh  a03_bmk.sh  a03_bmk_gpfs.sh  a04_filebench_fsmonitor.f  a04_filebench_gpfs.f  a04_filebench_simple.f  a05_bmk.sh  a05_bmk_gpfs_2.sh  a05_bmk_gpfs_3.sh  a05_bmk_gpfs_4.sh  a05_bmk_gpfs_5.sh  a05_test.sh  a06_bmk.sh  bmk.sh  creation-only.sh  evaluate_output.sh  evaluate_performance.sh  parallel_load.sh  run_exp34.sh  update-only.sh
